# liberty-go-logic

./: .stylish-haskell.yaml  Makefile  README.md  bg.cabal  bg.nix  default.nix  hie.yaml  lgl.cabal  lgl.nix  miso.nix  release.nix  shell.nix
elm/src/Api/: Game.elm  GameState.elm  GameStatus.elm  Group.elm  MoveError.elm  Outcome.elm  Pair.elm  Space.elm
nix/: shell.nix
nix/haskell/: default.nix  overlay.nix
purescript/: Game.purs  spago.dhall
purescript/src/: Game.purs
shared/: GameLogic.hs  Proofs.hs
src/: Board.hs  Bridge.hs  Build.hs  ElmConversion.hs  Game.hs  GameLogic.hs  Logic.hs  Main.hs  Proofs.hs  TestBoard.hs
tst/unit/: Main.hs  TestBoard.hs
