name:                bg
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bg#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bg
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                      ,bg

library
  exposed-modules: Board
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,mtl
                      ,lens
                      ,transformers
                      ,gdp
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-tests
  main-is:       Main.hs
  hs-source-dirs: tst/unit
  type:          exitcode-stdio-1.0
  build-depends: base >= 4.7 && < 5
                ,HUnit == 1.6.0.0
                ,sort
                ,containers
                ,mtl
                ,lens
                ,transformers
                ,bg
