name:                bg
version:             0.1.0.0
homepage:            https://github.com/Maxfield-Chen/liberty-go-server
license:             BSD3
license-file:        LICENSE
author:              Maxfield Chen
maintainer:          maxfieldchen@gmail.com
copyright:           2020 Maxfield Chen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bg
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                      ,bg
                      ,miso

library
  exposed-modules: Game, GameLogic, Proofs
  extensions: LambdaCase
            , TypeOperators
            , ScopedTypeVariables
            , FlexibleInstances
            , FlexibleContexts
            , MultiParamTypeClasses
            , PatternSynonyms    
            , ViewPatterns    
            , RankNTypes    
            , ExistentialQuantification    
            , GADTs    
            , RoleAnnotations    
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,mtl
                      ,lens
                      ,transformers
                      ,gdp == 0.0.3.0 
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-tests
  extensions: LambdaCase
            , TypeOperators
            , ScopedTypeVariables
            , FlexibleInstances
            , FlexibleContexts
            , MultiParamTypeClasses
            , PatternSynonyms    
            , ViewPatterns    
            , RankNTypes    
            , ExistentialQuantification    
            , GADTs    
            , RoleAnnotations    
  main-is:       Main.hs
  hs-source-dirs: tst/unit
  type:          exitcode-stdio-1.0
  build-depends: base >= 4.7 && < 5
                ,HUnit == 1.6.0.0
                ,sort
                ,containers
                ,mtl
                ,lens
                ,transformers
                ,gdp == 0.0.3.0
                ,bg
