name:                bg
version:             0.1.0.0
homepage:            https://github.com/Maxfield-Chen/liberty-go-server
license:             BSD3
license-file:        LICENSE
author:              Maxfield Chen
maintainer:          maxfieldchen@gmail.com
copyright:           2020 Maxfield Chen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable server
  hs-source-dirs:      server
  main-is:             Main.hs
  if impl(ghcjs)
    buildable: False
  else 
    ghc-options: -O2 -threaded -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5
                      ,bg
                      ,miso
                      ,aeson
                      ,http-types
                      ,lucid
                      ,mtl
                      ,network-uri
                      ,servant
                      ,servant-lucid
                      ,servant-server
                      ,text
                      ,wai
                      ,wai-app-static
                      ,wai-extra
                      ,warp
  default-language: Haskell2010

executable client
    main-is: Main.hs
    if !impl(ghcjs)
      buildable: False
    else 
      ghcjs-options:
        -dedupe -DGHCJS_GC_INTERVAL=5000
      hs-source-dirs:
        client
      build-depends:
        base >= 4.7 && < 5
       ,bg
       ,miso
       ,servant
       ,aeson
      default-language: Haskell2010

library
  exposed-modules: Game, GameLogic, Proofs
  extensions: LambdaCase
            , TypeOperators
            , ScopedTypeVariables
            , FlexibleInstances
            , FlexibleContexts
            , MultiParamTypeClasses
            , PatternSynonyms    
            , ViewPatterns    
            , RankNTypes    
            , ExistentialQuantification    
            , GADTs    
            , RoleAnnotations    
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,mtl
                      ,lens
                      ,transformers
                      ,gdp == 0.0.3.0 
  hs-source-dirs:      shared
  default-language:    Haskell2010

test-suite unit-tests
  extensions: LambdaCase
            , TypeOperators
            , ScopedTypeVariables
            , FlexibleInstances
            , FlexibleContexts
            , MultiParamTypeClasses
            , PatternSynonyms    
            , ViewPatterns    
            , RankNTypes    
            , ExistentialQuantification    
            , GADTs    
            , RoleAnnotations    
  main-is:       Main.hs
  hs-source-dirs: tst/unit
  type:          exitcode-stdio-1.0
  build-depends: base >= 4.7 && < 5
                ,HUnit == 1.6.0.0
                ,sort
                ,containers
                ,mtl
                ,lens
                ,transformers
                ,gdp == 0.0.3.0
                ,bg
  default-language: Haskell2010
