name:                lgl
version:             0.1.0.0
homepage:            https://github.com/Maxfield-Chen/liberty-go-server
license:             BSD3
license-file:        LICENSE
author:              Maxfield Chen
maintainer:          maxfieldchen@gmail.com
copyright:           2020 Maxfield Chen
category:            Application
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules: Game, GameLogic, Proofs
  ghc-options: -O2 -threaded -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
  extensions: LambdaCase
            , TypeOperators
            , ScopedTypeVariables
            , FlexibleInstances
            , FlexibleContexts
            , MultiParamTypeClasses
            , PatternSynonyms    
            , ViewPatterns    
            , RankNTypes    
            , GADTs    
            , RoleAnnotations    
  build-depends:       base >= 4.7 && < 5
                      ,aeson
                      ,containers
                      ,mtl
                      ,lens
                      ,transformers
                      ,gdp == 0.0.3.0 
                      ,sort
                      ,HUnit
                      ,Cabal
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-tests
  extensions: LambdaCase
            , TypeOperators
            , ScopedTypeVariables
            , FlexibleInstances
            , FlexibleContexts
            , MultiParamTypeClasses
            , PatternSynonyms    
            , ViewPatterns    
            , RankNTypes    
            , GADTs    
            , RoleAnnotations    
  main-is:       Main.hs
  hs-source-dirs: tst/unit
  type:          exitcode-stdio-1.0
  build-depends: base >= 4.7 && < 5
                ,HUnit == 1.6.0.0
                ,aeson
                ,sort
                ,containers
                ,mtl
                ,lens
                ,transformers
                ,gdp == 0.0.3.0
                ,lgl
  default-language: Haskell2010
